tests/ui/attributes/malformed-fn-align.stderr
error[E0539]: malformed `rustc_align` attribute input
  --> $DIR/malformed-fn-align.rs:10:5
   |
LL |     #[rustc_align]
   |     ^^^^^^^^^^^^^^
   |     |
   |     expected this to be a list
   |     help: must be of the form: `#[rustc_align(<alignment in bytes>)]`

error[E0805]: malformed `rustc_align` attribute input
  --> $DIR/malformed-fn-align.rs:13:5
   |
LL |     #[rustc_align(1, 2)]
   |     ^^^^^^^^^^^^^------^
   |     |            |
   |     |            expected a single argument here
   |     help: must be of the form: `#[rustc_align(<alignment in bytes>)]`

error[E0539]: malformed `rustc_align` attribute input
  --> $DIR/malformed-fn-align.rs:17:1
   |
LL | #[rustc_align = 16]
   | ^^^^^^^^^^^^^^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[rustc_align(<alignment in bytes>)]`

error[E0589]: invalid alignment value: not an unsuffixed integer
  --> $DIR/malformed-fn-align.rs:20:15
   |
LL | #[rustc_align("hello")]
   |               ^^^^^^^

error[E0589]: invalid alignment value: not a power of two
  --> $DIR/malformed-fn-align.rs:23:15
   |
LL | #[rustc_align(0)]
   |               ^

error: `#[repr(align(...))]` is not supported on function items
  --> $DIR/malformed-fn-align.rs:26:8
   |
LL | #[repr(align(16))]
   |        ^^^^^^^^^
   |
help: use `#[rustc_align(...)]` instead
  --> $DIR/malformed-fn-align.rs:26:8
   |
LL | #[repr(align(16))]
   |        ^^^^^^^^^

error: `#[rustc_align(...)]` is not supported on struct items
  --> $DIR/malformed-fn-align.rs:29:1
   |
LL | #[rustc_align(16)]
   | ^^^^^^^^^^^^^^^^^^
   |
help: use `#[repr(align(...))]` instead
   |
LL - #[rustc_align(16)]
LL + #[repr(align(16))]
   |

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0539, E0589, E0805.
For more information about an error, try `rustc --explain E0539`.
